--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Stats preview card component</title>
+  </head>
+  <body>
+    <main class="container-card">
+      <div class="left-box">
+        <div class="text-content">
+          <h1>Get <span>insights</span> that help your business grow.</h1>
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+        </div>
+        <div class="stats-container">
+          <div>
+            <span class="stats-heading"><strong>10k+</strong></span><br>
+            <span class="stats-text"><strong>companies</span>
+          </div>
+          <div>
+            <span class="stats-heading"><strong>314</strong></span><br>
+            <span class="stats-text">templates</span>
+          </div>
+          <div>
+            <span class="stats-heading"><strong>12m+</strong></span><br>
+            <span class="stats-text">queries</span>
+          </div>
+        </div>
+      </div>
+      <div class="image-container">
+        <img src="images/image-header-desktop.jpg" alt="picture" />
+      </div>
+    </main>
+  </body>
 </html>
