--- a/index.html
+++ b/index.html
@@ -18,32 +18,32 @@
     <title>Stats preview card component</title>
   </head>
   <body>
-    <main class="container-card">
-      <div class="left-box">
-        <div class="text-content">
-          <h1>Get <span>insights</span> that help your business grow.</h1>
-          <p>
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
-        </div>
-        <div class="stats-container">
-          <div>
-            <span class="stats-heading"><strong>10k+</strong></span><br>
-            <span class="stats-text"><strong>companies</span>
-          </div>
-          <div>
-            <span class="stats-heading"><strong>314</strong></span><br>
-            <span class="stats-text">templates</span>
-          </div>
-          <div>
-            <span class="stats-heading"><strong>12m+</strong></span><br>
-            <span class="stats-text">queries</span>
-          </div>
-        </div>
-      </div>
+    <main class="main-container">
       <div class="image-container">
-        <img src="images/image-header-desktop.jpg" alt="picture" />
+        <img src="images/image-header-mobile.jpg" alt="picture" />
+      </div>
+
+      <div class="text-container">
+        <h1>
+          Get <span class="colored-word">insights</span> that help your business
+          grow.
+        </h1>
+        <p>
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
+        <div class="stats">
+          <span class="stats-heading">10k+</span>
+          <span class="stats-text">companies</span>
+        </div>
+        <div class="stats">
+          <span class="stats-heading">314</span>
+          <span class="stats-text">templates</span>
+        </div>
+        <div class="stats">
+          <span class="stats-heading">12m+</span>
+          <span class="stats-text">queries</span>
+        </div>
       </div>
     </main>
   </body>
